# dumbo_moveit

./: .gitignore  README.md
dumbo_moveit/: CMakeLists.txt  package.xml
dumbo_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
dumbo_moveit_config/config/: controllers.yaml  dumbo.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
dumbo_moveit_config/launch/: default_warehouse_db.launch  demo.launch  dumbo_moveit_controller_manager.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
dumbo_moveit_examples/: CMakeLists.txt  package.xml
dumbo_moveit_examples/src/: dumbo_move_group_example.cpp
dumbo_moveit_plugins/: CMakeLists.txt  dumbo_moveit_kinematics_plugin_description.xml  package.xml
dumbo_moveit_plugins/dumbo_arm_kinematics/: CMakeLists.txt
dumbo_moveit_plugins/dumbo_arm_kinematics/include/moveit/dumbo_arm_kinematics/: dumbo_arm_ik.h  dumbo_arm_ik_solver.h  dumbo_arm_kinematics.h  dumbo_arm_kinematics_constants.h  dumbo_arm_kinematics_plugin.h  dumbo_arm_kinematics_utils.h  dumbo_arm_params.h  dumbo_kinematics.h  homogenic_vectors.h  utils.h
dumbo_moveit_plugins/dumbo_arm_kinematics/src/: dumbo_arm_ik.cpp  dumbo_arm_ik_solver.cpp  dumbo_arm_kinematics.cpp  dumbo_arm_kinematics_plugin.cpp  dumbo_arm_kinematics_utils.cpp  dumbo_kinematics.c  homogenic_vectors.c  main.cpp
