<package>
 <name>dumbo_moveit_examples</name>
  <version>1.0.0</version>
  <description>
    Example codes for running moveit on Dumbo.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dumbo_moveit_examples</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>

</package>

