<package>
  <name>dumbo_moveit_plugins</name>
  <version>0.4.3</version>
  <description>Dumbo specific plugins for MoveIt</description>
  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dumbo_moveit_plugins</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend> 
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_msgs</run_depend> 
  <run_depend>actionlib</run_depend> 
  <run_depend>angles</run_depend>

  <export>
    <moveit_core plugin="${prefix}/dumbo_moveit_kinematics_plugin_description.xml"/>
  </export>

</package>
